--- a/app/src/main/res/layout/header_result_item.xml
+++ b/app/src/main/res/layout/header_result_item.xml
@@ -19,15 +19,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/backgroundColor">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
         android:backgroundTint="@color/colorSecondaryDark"
         app:cardElevation="0dp"
         tools:ignore="UnusedAttribute">
