--- a/app/src/main/res/layout/main_result_item.xml
+++ b/app/src/main/res/layout/main_result_item.xml
@@ -17,112 +17,113 @@
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="?attr/backgroundColor"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/backgroundColor">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="3dp"
+        android:layout_marginRight="5dp"
         android:layout_marginBottom="3dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
         android:backgroundTint="?attr/foregroundColor"
         app:cardElevation="1dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="4dp">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/main_result_kino_poster"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:maxWidth="120px"
-                android:maxHeight="150px"
-                android:minWidth="120px"
-                android:minHeight="150px"
-                android:paddingEnd="5dp"
+                android:layout_height="match_parent"
                 android:src="@drawable/noimage_purple" />
 
-            <TextView
-                android:id="@+id/main_result_kino_title"
+            <RelativeLayout
+                android:id="@+id/text_content"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/main_result_kino_poster"
-                android:text="Large Text"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-            <TextView
-                android:id="@+id/main_result_kino_year"
-                style="@style/TextAppearance.AppCompat.Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/main_result_kino_title"
-                android:layout_toEndOf="@id/main_result_kino_poster"
-                android:text="Large Text"
-                android:textStyle="italic" />
-
-            <ImageView
-                android:id="@+id/main_result_kino_review_date_logo"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_below="@id/main_result_kino_title"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@+id/main_result_kino_year"
-                android:paddingTop="2dp"
-                android:paddingEnd="2dp"
-                android:src="@drawable/round_eye_purple"
-                tools:ignore="RtlSymmetry" />
-
-            <TextView
-                android:id="@+id/main_result_kino_review_date"
-                style="@style/TextAppearance.AppCompat.Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/main_result_kino_title"
-                android:layout_toEndOf="@+id/main_result_kino_review_date_logo"
-                android:paddingEnd="5dp"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/colorPrimary"
-                tools:ignore="RtlSymmetry" />
-
-            <RatingBar
-                android:id="@+id/main_result_kino_rating_bar_small"
-                style="@style/Widget.AppCompat.RatingBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/main_result_kino_poster"
-                android:layout_alignParentEnd="true"
-                android:paddingBottom="4dp" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/main_result_kino_poster"
-                android:layout_alignParentEnd="true">
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_toEndOf="@id/main_result_kino_poster">
 
                 <TextView
-                    android:id="@+id/main_result_kino_rating_bar_as_text"
+                    android:id="@+id/main_result_kino_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:text="Large Text"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/colorPrimary" />
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/main_result_kino_rating_bar_max_as_text"
+                    android:id="@+id/main_result_kino_year"
+                    style="@style/TextAppearance.AppCompat.Medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/main_result_kino_title"
+                    android:text="Large Text" />
+
+                <ImageView
+                    android:id="@+id/main_result_kino_review_date_logo"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_below="@id/main_result_kino_title"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_toEndOf="@+id/main_result_kino_year"
+                    android:paddingTop="2dp"
+                    android:src="@drawable/round_eye_purple"
+                    tools:ignore="RtlSymmetry" />
+
+                <TextView
+                    android:id="@+id/main_result_kino_review_date"
+                    style="@style/TextAppearance.AppCompat.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/main_result_kino_title"
+                    android:layout_toEndOf="@+id/main_result_kino_review_date_logo"
+                    android:paddingEnd="5dp"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/colorPrimaryLight" />
-            </LinearLayout>
+                    tools:ignore="RtlSymmetry" />
+
+                <RatingBar
+                    android:id="@+id/main_result_kino_rating_bar_small"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="4dp"
+                    android:layout_alignBottom="@id/main_result_kino_review_date"
+                    android:layout_alignParentEnd="true" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/main_result_kino_review_date"
+                    android:layout_alignParentEnd="true">
+
+                    <TextView
+                        android:id="@+id/main_result_kino_rating_bar_as_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="@color/colorPrimaryDark" />
+
+                    <TextView
+                        android:id="@+id/main_result_kino_rating_bar_max_as_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="@color/colorPrimaryLight" />
+                </LinearLayout>
+
+            </RelativeLayout>
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
