--- a/app/src/main/res/layout/content_add_review.xml
+++ b/app/src/main/res/layout/content_add_review.xml
@@ -53,6 +53,8 @@
         android:id="@+id/kino_results"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:divider="@color/white"
+        android:dividerHeight="0dp"
         android:layout_below="@+id/kino_search_add_from_scratch"/>
 
 </RelativeLayout>
