--- a/app/src/main/res/layout/wishlist_item.xml
+++ b/app/src/main/res/layout/wishlist_item.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  CineLog Copyright 2019 Pierre Rognon
  kinolog Copyright (C) 2017  ryan rigby
 
@@ -18,43 +17,60 @@
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingEnd="5dp"
-    android:paddingStart="5dp">
+    android:background="?attr/backgroundColor">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/item_poster"
-        android:src="@drawable/noimage_purple"
-        android:maxWidth="120px"
-        android:minWidth="120px"
-        android:maxHeight="150px"
-        android:minHeight="150px"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:paddingEnd="5dp"/>
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="3dp"
+        android:backgroundTint="?attr/foregroundColor"
+        app:cardElevation="1dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/item_title"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/item_poster" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.AppCompat.Medium"
-        android:text="Large Text"
-        android:textStyle="italic"
-        android:id="@+id/item_year"
-        android:layout_toEndOf="@id/item_poster"
-        android:layout_below="@id/item_title" />
+            <ImageView
+                android:id="@+id/item_poster"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/noimage_purple" />
+
+            <RelativeLayout
+                android:id="@+id/text_content"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_toEndOf="@id/item_poster">
+
+                <TextView
+                    android:id="@+id/item_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:text="Large Text"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                <TextView
+                    android:id="@+id/item_year"
+                    style="@style/TextAppearance.AppCompat.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/item_title"
+                    android:text="Large Text"
+                    android:textStyle="italic" />
+
+            </RelativeLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 
 </RelativeLayout>
