--- a/app/src/main/res/layout/main_result_item.xml
+++ b/app/src/main/res/layout/main_result_item.xml
@@ -20,70 +20,72 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?attr/backgroundColor">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="5dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
         android:layout_marginTop="3dp"
-        android:layout_marginRight="5dp"
         android:layout_marginBottom="3dp"
         android:backgroundTint="?attr/foregroundColor"
-        app:cardElevation="1dp">
+        app:cardCornerRadius="5dp"
+        app:cardElevation="1dp"
+        app:cardMaxElevation="1dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="60dp" >
 
             <ImageView
                 android:id="@+id/main_result_kino_poster"
-                android:layout_width="wrap_content"
+                android:layout_width="48dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/noimage_purple" />
+                android:scaleType="fitStart"/>
 
             <RelativeLayout
                 android:id="@+id/text_content"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@id/main_result_kino_poster">
 
                 <TextView
                     android:id="@+id/main_result_kino_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:text="Large Text"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/main_result_kino_year"
                     style="@style/TextAppearance.AppCompat.Medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/main_result_kino_title"
-                    android:text="Large Text" />
+                    android:layout_alignParentTop="true"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:paddingBottom="5dp"/>
+
+                <TextView
+                    android:id="@+id/main_result_kino_year"
+                    style="@style/TextAppearance.AppCompat.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/main_result_kino_title" />
 
                 <ImageView
                     android:id="@+id/main_result_kino_review_date_logo"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_below="@id/main_result_kino_title"
                     android:layout_marginStart="10dp"
-                    android:layout_marginEnd="4dp"
+                    android:layout_marginEnd="2dp"
                     android:layout_toEndOf="@+id/main_result_kino_year"
-                    android:paddingTop="2dp"
+                    android:paddingTop="1dp"
                     android:src="@drawable/round_eye_purple"
                     tools:ignore="RtlSymmetry" />
 
                 <TextView
                     android:id="@+id/main_result_kino_review_date"
-                    style="@style/TextAppearance.AppCompat.Medium"
+                    style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/main_result_kino_title"
@@ -97,7 +99,7 @@
                     style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="4dp"
+                    android:paddingBottom="2dp"
                     android:layout_alignBottom="@id/main_result_kino_review_date"
                     android:layout_alignParentEnd="true" />
 
