--- a/app/src/main/res/layout/wishlist_item.xml
+++ b/app/src/main/res/layout/wishlist_item.xml
@@ -24,31 +24,35 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="5dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
         android:layout_marginTop="3dp"
-        android:layout_marginRight="5dp"
         android:layout_marginBottom="3dp"
         android:backgroundTint="?attr/foregroundColor"
-        app:cardElevation="1dp">
+        app:cardCornerRadius="5dp"
+        app:cardElevation="1dp"
+        app:cardMaxElevation="1dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="50dp">
 
             <ImageView
                 android:id="@+id/item_poster"
-                android:layout_width="wrap_content"
+                android:layout_width="40dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/noimage_purple" />
+                android:scaleType="fitStart"/>
 
             <RelativeLayout
                 android:id="@+id/text_content"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@id/item_poster">
 
                 <TextView
@@ -56,17 +60,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:text="Large Text"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    style="@style/TextAppearance.AppCompat.Medium"/>
 
                 <TextView
                     android:id="@+id/item_year"
-                    style="@style/TextAppearance.AppCompat.Medium"
+                    style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/item_title"
-                    android:text="Large Text"
-                    android:textStyle="italic" />
+                    android:layout_below="@id/item_title"/>
 
             </RelativeLayout>
         </RelativeLayout>
