--- a/app/src/main/res/layout/wishlist_search_result_item.xml
+++ b/app/src/main/res/layout/wishlist_search_result_item.xml
@@ -22,23 +22,26 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
-        app:cardElevation="1dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="3dp"
-        android:backgroundTint="?attr/foregroundColor">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:backgroundTint="?attr/foregroundColor"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="1dp"
+        app:cardMaxElevation="1dp">
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="50dp">
 
             <ImageView
                 android:id="@+id/kino_poster"
-                android:layout_width="wrap_content"
+                android:layout_width="40dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/noimage_purple" />
+                android:scaleType="fitStart"/>
 
             <RelativeLayout
                 android:id="@+id/text_content"
@@ -58,16 +61,14 @@
                     android:maxLines="1"
                     android:scrollHorizontally="true"
                     android:text="Large Text"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <TextView
                     android:id="@+id/kino_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/kino_title"
-                    android:text="Large Text"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="italic" />
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
             </RelativeLayout>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
