--- a/app/src/main/res/layout/content_kino_view_unregistered.xml
+++ b/app/src/main/res/layout/content_kino_view_unregistered.xml
@@ -72,5 +72,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="7dp"
-        android:textAlignment="center" />
+        android:textAlignment="textStart" />
 </LinearLayout>
