--- a/app/src/main/res/layout/content_edit_review.xml
+++ b/app/src/main/res/layout/content_edit_review.xml
@@ -116,7 +116,7 @@
                             android:layout_width="0dp"
                             android:layout_weight="0.5"
                             android:layout_height="match_parent"
-                            android:gravity="center"
+                            android:gravity="center_vertical"
                             android:orientation="vertical"
                             android:paddingEnd="10dp"
                             tools:ignore="RtlSymmetry">
