--- a/app/src/main/res/layout/serie_episode_result_item.xml
+++ b/app/src/main/res/layout/serie_episode_result_item.xml
@@ -18,6 +18,7 @@
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,8 +26,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="7dp"
-        android:layout_marginRight="7dp"
         android:layout_marginTop="2dp"
+        android:layout_marginRight="7dp"
         android:layout_marginBottom="2dp"
         android:backgroundTint="?attr/foregroundColor"
         app:cardCornerRadius="5dp"
@@ -35,36 +36,85 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:layout_centerVertical="true"
+            android:layout_margin="5dp">
 
-<!--            <ImageView-->
-<!--                android:id="@+id/kino_poster"-->
-<!--                android:layout_width="40dp"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:scaleType="fitStart"/>-->
-
-            <RelativeLayout
-                android:id="@+id/text_content"
+            <TextView
+                android:id="@+id/serie_episode_item_season_number_label"
+                style="@style/TextAppearance.AppCompat.Small"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp">
-               <!-- android:layout_toEndOf="@id/kino_poster">-->
+                android:layout_height="wrap_content"
+                android:text="@string/serie_episode_season_number_label" />
+
+            <TextView
+                android:id="@+id/serie_episode_item_season_number"
+                style="@style/TextAppearance.AppCompat.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/serie_episode_item_season_number_label"
+                android:paddingStart="5dp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                tools:ignore="RtlSymmetry" />
+
+            <TextView
+                android:id="@+id/serie_episode_item_episode_number_label"
+                style="@style/TextAppearance.AppCompat.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/serie_episode_item_season_number"
+                android:paddingStart="10dp"
+                android:text="@string/serie_episode_episode_number_label"
+                tools:ignore="RtlSymmetry" />
+
+            <TextView
+                android:id="@+id/serie_episode_item_episode_number"
+                style="@style/TextAppearance.AppCompat.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/serie_episode_item_episode_number_label"
+                android:paddingStart="5dp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                tools:ignore="RtlSymmetry" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true">
 
                 <TextView
-                    android:id="@+id/episode_name"
+                    android:id="@+id/serie_episode_item_date"
+                    style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:scrollHorizontally="true"
-                    android:text="Large Text"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:layout_below="@id/serie_episode_item_season_number_label"
+                android:layout_alignParentEnd="true">
+
+                <TextView
+                    android:id="@+id/serie_episode_item_name"
+                    style="@style/TextAppearance.AppCompat.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
+                <ImageView
+                    android:id="@+id/serie_episode_item_viewed"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/round_eye_grey"
+                    tools:ignore="RtlSymmetry" />
             </RelativeLayout>
+
         </RelativeLayout>
+
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
