--- a/app/src/main/res/layout/activity_view_serie.xml
+++ b/app/src/main/res/layout/activity_view_serie.xml
@@ -35,6 +35,15 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"/>
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/serie_view_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarLayout"
+            app:tabGravity="fill"
+            app:tabMode="fixed"
+            app:tabTextColor="@color/colorSecondaryLight"/>
+
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_view_serie" />
