--- a/app/src/main/res/layout/content_import_db.xml
+++ b/app/src/main/res/layout/content_import_db.xml
@@ -44,6 +44,7 @@
         android:text="@string/import_db" />
 
     <android.support.v7.widget.CardView
+        app:cardBackgroundColor="?attr/backgroundColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/import_db_button"
