--- a/app/src/main/res/layout/content_kino_view.xml
+++ b/app/src/main/res/layout/content_kino_view.xml
@@ -56,6 +56,7 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:gravity="center"
+                android:background="?attr/backgroundColor"
                 android:orientation="vertical">
 
                 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
