--- a/app/src/main/res/values/donottranslate_arrays.xml
+++ b/app/src/main/res/values/donottranslate_arrays.xml
@@ -28,6 +28,13 @@
         <item>order_by_date_added_oldest_first</item>
     </string-array>
 
+    <string-array name="available_serie_sort_type_values">
+        <item>order_by_title_asc</item>
+        <item>order_by_title_desc</item>
+        <item>order_by_rating_highest_first</item>
+        <item>order_by_rating_lowest_first</item>
+    </string-array>
+
     <string-array name="available_tmdb_languages_values">
         <item>aa</item>
         <item>af</item>
